Separando a função de bloquear input do app.js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button class="black-button" onclick="adicionarCaracter('.')">.</button>
     </div>
     <script src="app.js"></script>
+    <script src="bloquearInput.js"></script>
 </body>
 
 </html>
