Mudando o operador  ponto (.) para vírgula (,).

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button data-valor="3" class="black-button">3</button>
         <button data-acao="calcular" class="equal-button equal">=</button>
         <button data-valor="0" class="black-button zero">0</button>
-        <button data-valor="." class="black-button">.</button>
+        <button data-valor="," class="black-button">,</button>
     </div>
     <section class="historico-section">
         <h2>Histórico</h2>
